# qtown

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COST_METHODOLOGY.md  HUMAN.md  Makefile  Procfile  README.md  cost_tracking.json  docker-compose.deps.yml  docker-compose.yml  generate_npc_sprites.py  metrics.jsonl  new_stories_data.json  prd.json  progress.txt  ralph-start.bat  ralph-status.bat  ralph-stop.bat  requirements.txt  spec.md  stories_266_350.py
asset-gen/: .gitignore  README.md  config.yaml  requirements.txt  run_batch.py  server.py  style-spec.md  taxonomy.yaml
dashboard/: .gitignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: 2026-interview-gap-plan.md  REQUIREMENTS.md  STATE.md  architecture.md  blog-post-v1-closeout.md  fastapi-patterns.md  generate-stories-prompt.md  handover-domain-flip.md  handover-ralph-activation.md  index.json  next-steps-runbook.md  simulation-guide.md  v2-audit.md  v2-phase-7-rooms.md  v2-phase-7-style-moodboard.md  v2-phase2-runbook.md  v2-pipeline.md  v2-spec.md  visual-style-guide.md
engine/: db.py  main.py  models.py  simulation.py
infra/: docker-compose.observability.yml  init-db.sql  kafka-init.sh
landing/: Caddyfile  Dockerfile  app.js  base.css  index.html  style.css
proto/: buf.gen.yaml  buf.yaml
ralph/: README.md  alerter.py  asset_gen.py  backfill_sprites.py  build_v2_backlog.py  cost_tracker.py  deployer.py  file_writer.py  fix_common_errors.py  generate_worklist.py  learnings.py  metrics.py  prompt_builder.py  ralph.py  snapshot.py  story_generator.py  test_runner.py  v2_config.py  v2_cross_service.py  v2_model_router.py  v2_orchestrator.py  v2_setup_models.sh  v2_start.sh  v2_worklist.py  worklist.json
services/academy/: .dockerignore  Dockerfile  README.md  conftest.py  pyproject.toml
services/academy/academy/: cost_tracker.py  grpc_server.py  kafka_consumer.py  kafka_producer.py  main.py  model_router.py  ollama_client.py  telemetry.py
services/academy/academy/agents/: conversation.py  decision_trace.py  evolution.py  memory.py  npc.py  personality.py  social.py
services/academy/academy/content/: anthem.py  newspaper.py  quests.py
services/academy/academy/models/: router.py
services/academy/academy/qtown/: academy_pb2.py  academy_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py
services/academy/academy/rag/: __init__.py  answer.py  corpus.py  embeddings.py  reranker.py  retriever.py
services/academy/academy/tests/: test_newspaper.py  test_npc_agent.py  test_quests.py
services/academy/evals/: __init__.py  build_events_fixture.py  build_fixture.py  events_fixture.npz  events_golden.json  events_recall.py  faithfulness.py  fixture.npz  golden.json  recall.py
services/academy/tests/: test_conversation.py  test_cost_tracker.py  test_dialogue_grounding.py  test_embeddings.py  test_evolution.py  test_grpc.py  test_kafka_producer.py  test_memory.py  test_model_router.py  test_rag.py  test_rag_answer.py  test_social.py
services/asset-pipeline/: Dockerfile  pyproject.toml
services/asset-pipeline/asset_pipeline/: __init__.py  comfyui_client.py  kafka_consumer.py  kafka_producer.py  main.py  s3_upload.py
services/fortress/: Cargo.toml  Dockerfile
services/fortress/benches/: validation.rs
services/fortress/src/: audit.rs  grpc_service.rs  kafka_consumer.rs  lib.rs  main.rs  telemetry.rs  types.rs  wasm_sandbox.rs
services/fortress/src/crime/: black_market.rs  investigation.rs  mod.rs  tests.rs  trial.rs
services/fortress/src/rules/: gold.rs  mod.rs  trade_volume.rs  travel.rs
services/fortress/src/validation/: mod.rs
services/fortress/src/wasm/: compiler.rs  mod.rs  policy_registry.rs  policy_template.rs  tests.rs
snapshots/: 007_state.json  032_state.json  035_state.json  060_state.json  146_state.json  211_state.json  214_state.json  215_state.json  226_state.json  227_state.json  234_state.json  235_state.json  237_state.json  239_state.json  240_state.json  248_state.json  249_state.json  250_state.json  251_state.json  254_state.json  255_state.json  264_state.json  267_state.json  269_state.json  270_state.json  279_state.json  281_state.json  282_state.json  285_state.json  288_state.json  289_state.json  290_state.json  291_state.json  292_state.json  298_state.json  299_state.json  305_state.json  311_state.json  313_state.json  316_state.json  (+95 more)
tasks/: todo.md
tests/: conftest.py  (+9 more)
(+466 files in other folders)
