[project]
name = "qtown-academy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "grpcio>=1.65.0",
    "grpcio-tools>=1.65.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "pgvector>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
]
