[project]
name = "qtown-academy"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    # HTTP / async
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",

    # gRPC
    "grpcio>=1.65.0",
    "grpcio-tools>=1.65.0",
    "protobuf>=5.0.0",

    # Kafka
    "aiokafka>=0.11.0",

    # AI / LangGraph
    "langchain>=0.3.0",
    "langgraph>=0.2.0",

    # Database / pgvector
    "pgvector>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["academy*"]
