[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qtown-asset-pipeline"
version = "0.1.0"
description = "Qtown Asset Pipeline — ComfyUI image generation + S3/R2 upload"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "aiokafka>=0.10.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["asset_pipeline"]
